cmake_minimum_required(VERSION 3.23)
message(STATUS "Using toolchain file: ${CMAKE_TOOLCHAIN_FILE}")

project(encre LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(core)
add_subdirectory(py)
add_subdirectory(cli)
if(EMSCRIPTEN)
    add_subdirectory(js)
endif()

set(clangd_file "${CMAKE_CURRENT_LIST_DIR}/.clangd")
set(CLANGD_FLAGS_TO_ADD "-std=c++2b")
set(CLANGD_FLAGS_TO_REMOVE "-std=c++23")
if(EMSCRIPTEN)
    execute_process(COMMAND "${CMAKE_C_COMPILER}" --cflags OUTPUT_VARIABLE em_c_flags)
    separate_arguments(em_c_flags UNIX_COMMAND "${em_c_flags}")
    list(APPEND CLANGD_FLAGS_TO_ADD ${em_c_flags})
endif()
list(JOIN CLANGD_FLAGS_TO_ADD ", " CLANGD_FLAGS_TO_ADD)
list(JOIN CLANGD_FLAGS_TO_REMOVE ", " CLANGD_FLAGS_TO_REMOVE)
set(clangd_template "../cmake/clangd.in")
configure_file(${clangd_template} ${clangd_file})
